[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "A basic version of Tetris just for fun"
authors = ["Carson Chapman <carsonchapman1123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
